--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Image references" minToolsVersion="12.0"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -61,40 +62,104 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="WBa-KA-WPJ">
-                                <rect key="frame" x="16" y="44" width="343" height="574"/>
+                                <rect key="frame" x="16" y="44" width="343" height="559"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello Taha" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WEs-Yw-JG7">
-                                        <rect key="frame" x="0.0" y="0.0" width="343" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wellcome Back !" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gQu-TJ-M1t">
-                                        <rect key="frame" x="0.0" y="35.5" width="343" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CxV-w3-6pg">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="80"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello Taha" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WEs-Yw-JG7">
+                                                <rect key="frame" x="0.0" y="15" width="79.5" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wellcome Back !" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gQu-TJ-M1t">
+                                                <rect key="frame" x="0.0" y="50.5" width="126" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="B7O-ns-2Hp">
+                                                <rect key="frame" x="273" y="11.5" width="60" height="57"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="60" id="bse-TW-FNB"/>
+                                                    <constraint firstAttribute="width" constant="60" id="ljj-Mm-mLi"/>
+                                                </constraints>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="25"/>
+                                                </userDefinedRuntimeAttributes>
+                                            </imageView>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="B7O-ns-2Hp" firstAttribute="centerY" secondItem="CxV-w3-6pg" secondAttribute="centerY" id="0uD-8x-UHL"/>
+                                            <constraint firstItem="WEs-Yw-JG7" firstAttribute="leading" secondItem="CxV-w3-6pg" secondAttribute="leading" id="3b6-kO-v0L"/>
+                                            <constraint firstAttribute="trailing" secondItem="B7O-ns-2Hp" secondAttribute="trailing" constant="10" id="7sT-EM-uMb"/>
+                                            <constraint firstItem="gQu-TJ-M1t" firstAttribute="top" secondItem="WEs-Yw-JG7" secondAttribute="bottom" constant="15" id="Nnm-Cv-k1V"/>
+                                            <constraint firstItem="WEs-Yw-JG7" firstAttribute="leading" secondItem="CxV-w3-6pg" secondAttribute="leading" id="X5K-nW-fkZ"/>
+                                            <constraint firstAttribute="height" constant="80" id="dKU-Ao-ce2"/>
+                                            <constraint firstItem="gQu-TJ-M1t" firstAttribute="leading" secondItem="CxV-w3-6pg" secondAttribute="leading" id="mt5-zM-Qmc"/>
+                                            <constraint firstItem="WEs-Yw-JG7" firstAttribute="top" secondItem="CxV-w3-6pg" secondAttribute="top" constant="15" id="wsj-1m-Su3"/>
+                                        </constraints>
+                                    </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="mvu-N6-3Lz">
-                                        <rect key="frame" x="0.0" y="71" width="343" height="503"/>
+                                        <rect key="frame" x="0.0" y="95" width="343" height="464"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yq5-aa-qaO">
-                                                <rect key="frame" x="0.0" y="0.0" width="343" height="161"/>
-                                                <color key="backgroundColor" systemColor="systemCyanColor"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="343" height="148"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Daily Tasks" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DNT-Ly-c6L">
+                                                        <rect key="frame" x="10" y="15" width="85" height="20.5"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5 out 3 are complated" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XQi-ma-EQ7">
+                                                        <rect key="frame" x="10" y="50.5" width="202" height="20.5"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <view clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="a6J-JI-gWw" customClass="KYCircularProgress" customModule="Agenda" customModuleProvider="target">
+                                                        <rect key="frame" x="220" y="14" width="107" height="120"/>
+                                                        <color key="backgroundColor" name="SummaryBgColor"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="100" id="CNw-yY-0Qk"/>
+                                                        </constraints>
+                                                        <userDefinedRuntimeAttributes>
+                                                            <userDefinedRuntimeAttribute type="color" keyPath="guideColor">
+                                                                <color key="value" red="0.93725490196078431" green="0.60392156862745094" blue="0.36078431372549019" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            </userDefinedRuntimeAttribute>
+                                                            <userDefinedRuntimeAttribute type="boolean" keyPath="showGuide" value="YES"/>
+                                                        </userDefinedRuntimeAttributes>
+                                                    </view>
+                                                </subviews>
+                                                <color key="backgroundColor" name="SummaryBgColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="trailing" secondItem="a6J-JI-gWw" secondAttribute="trailing" constant="16" id="2hW-qY-pMe"/>
+                                                    <constraint firstItem="a6J-JI-gWw" firstAttribute="centerY" secondItem="Yq5-aa-qaO" secondAttribute="centerY" id="9YX-Hq-Xsl"/>
+                                                    <constraint firstItem="a6J-JI-gWw" firstAttribute="top" secondItem="Yq5-aa-qaO" secondAttribute="top" constant="15" id="GB9-pP-aaU"/>
+                                                    <constraint firstItem="DNT-Ly-c6L" firstAttribute="leading" secondItem="Yq5-aa-qaO" secondAttribute="leading" constant="10" id="GuC-Pe-hGW"/>
+                                                    <constraint firstItem="XQi-ma-EQ7" firstAttribute="leading" secondItem="Yq5-aa-qaO" secondAttribute="leading" constant="10" id="M3A-M5-gd0"/>
+                                                    <constraint firstItem="a6J-JI-gWw" firstAttribute="leading" secondItem="XQi-ma-EQ7" secondAttribute="trailing" constant="15" id="Yck-3g-6s2"/>
+                                                    <constraint firstItem="DNT-Ly-c6L" firstAttribute="top" secondItem="Yq5-aa-qaO" secondAttribute="top" constant="15" id="Zp3-xf-5e8"/>
+                                                    <constraint firstAttribute="bottom" secondItem="a6J-JI-gWw" secondAttribute="bottom" constant="15" id="pJm-OM-ncR"/>
+                                                    <constraint firstItem="XQi-ma-EQ7" firstAttribute="top" secondItem="DNT-Ly-c6L" secondAttribute="bottom" constant="15" id="si9-Oi-mE5"/>
+                                                </constraints>
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="10"/>
                                                 </userDefinedRuntimeAttributes>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V17-PR-FoZ">
-                                                <rect key="frame" x="0.0" y="171" width="343" height="161"/>
-                                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                                <rect key="frame" x="0.0" y="158" width="343" height="148"/>
+                                                <color key="backgroundColor" name="DailyReviewBgColor"/>
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="10"/>
                                                 </userDefinedRuntimeAttributes>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7D6-od-tNw">
-                                                <rect key="frame" x="0.0" y="342" width="343" height="161"/>
-                                                <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                                                <rect key="frame" x="0.0" y="316" width="343" height="148"/>
+                                                <color key="backgroundColor" name="MonthReviewBgColor"/>
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="10"/>
                                                 </userDefinedRuntimeAttributes>
@@ -110,14 +175,14 @@
                             <constraint firstItem="WBa-KA-WPJ" firstAttribute="top" secondItem="mpa-sV-hRD" secondAttribute="topMargin" id="4Sm-uR-c7h"/>
                             <constraint firstAttribute="trailingMargin" secondItem="WBa-KA-WPJ" secondAttribute="trailing" id="ZKc-B8-Imd"/>
                             <constraint firstItem="WBa-KA-WPJ" firstAttribute="leading" secondItem="mpa-sV-hRD" secondAttribute="leadingMargin" id="fXZ-SO-JGF"/>
-                            <constraint firstAttribute="bottomMargin" secondItem="WBa-KA-WPJ" secondAttribute="bottom" id="xQW-G3-tKr"/>
+                            <constraint firstItem="Hxa-ep-D0z" firstAttribute="bottom" secondItem="WBa-KA-WPJ" secondAttribute="bottom" constant="15" id="xQW-G3-tKr"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Home" id="1Kt-c5-z25"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ffm-3l-LDO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1631" y="1558"/>
+            <point key="canvasLocation" x="-1632.8" y="1556.6716641679161"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="z58-pP-CEG">
@@ -282,19 +347,20 @@
         <image name="clock" catalog="system" width="128" height="121"/>
         <image name="homekit" catalog="system" width="128" height="106"/>
         <image name="list.bullet.rectangle.portrait" catalog="system" width="115" height="128"/>
+        <image name="person.fill" catalog="system" width="128" height="120"/>
         <image name="plus.circle" catalog="system" width="128" height="121"/>
         <image name="slider.horizontal.3" catalog="system" width="128" height="100"/>
+        <namedColor name="DailyReviewBgColor">
+            <color red="0.98039215686274506" green="1" blue="0.76862745098039209" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="MonthReviewBgColor">
+            <color red="0.90196078431372551" green="0.96078431372549022" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="SummaryBgColor">
+            <color red="0.99607843137254903" green="0.8784313725490196" blue="0.792156862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemCyanColor">
-            <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemOrangeColor">
-            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
