--- a/View/Base.lproj/Main.storyboard
+++ b/View/Base.lproj/Main.storyboard
@@ -494,11 +494,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="7zq-H3-ukT">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="7zq-H3-ukT">
                                 <rect key="frame" x="0.0" y="44" width="320" height="475"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zeQ-1n-wEV">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="237"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="232.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iMj-RH-pIv">
                                                 <rect key="frame" x="5" y="0.0" width="310" height="20.5"/>
@@ -507,7 +507,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="NXD-Gh-z0E" customClass="JTACMonthView" customModule="JTAppleCalendar">
-                                                <rect key="frame" x="0.0" y="51" width="320" height="186"/>
+                                                <rect key="frame" x="0.0" y="51" width="320" height="181.5"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="BgE-td-kRk">
                                                     <size key="itemSize" width="130" height="130"/>
@@ -517,7 +517,7 @@
                                                 </collectionViewFlowLayout>
                                                 <cells>
                                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="dateCell" id="Fhc-Vv-36h" customClass="DateCell" customModule="Agenda" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="28" width="130" height="130"/>
+                                                        <rect key="frame" x="0.0" y="26" width="130" height="130"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="lJQ-b7-Ucp">
                                                             <rect key="frame" x="0.0" y="0.0" width="130" height="130"/>
@@ -620,15 +620,15 @@
                                             <constraint firstAttribute="bottom" secondItem="NXD-Gh-z0E" secondAttribute="bottom" id="ytQ-Dg-vtd"/>
                                         </constraints>
                                     </view>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="TIs-Iv-Vtl">
-                                        <rect key="frame" x="0.0" y="238" width="320" height="237"/>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="TIs-Iv-Vtl">
+                                        <rect key="frame" x="0.0" y="242.5" width="320" height="232.5"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <prototypes>
-                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="historyCell" id="u1e-Uh-fQB">
-                                                <rect key="frame" x="0.0" y="44.5" width="320" height="43.5"/>
+                                            <tableViewCell clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" accessoryType="checkmark" indentationWidth="10" reuseIdentifier="historyCell" rowHeight="52" id="u1e-Uh-fQB" customClass="TaskHistoryTableViewCell" customModule="Agenda" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="44.5" width="320" height="52"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="u1e-Uh-fQB" id="yNq-5C-3XJ">
-                                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="283.5" height="52"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                 </tableViewCellContentView>
                                             </tableViewCell>
@@ -650,6 +650,7 @@
                     <connections>
                         <outlet property="calendar" destination="NXD-Gh-z0E" id="BEn-xj-Uuu"/>
                         <outlet property="monthLabel" destination="iMj-RH-pIv" id="fpJ-WB-Xti"/>
+                        <outlet property="taskListView" destination="TIs-Iv-Vtl" id="7L0-ym-aay"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DAD-YE-3fH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
